--- a/static/css/custom-styles.css
+++ b/static/css/custom-styles.css
@@ -54,6 +54,7 @@ h1 {
     border-radius: 4px;
     margin-left: 0.3em;
     border: 1px solid #fff;
+    white-space: nowrap;
 }
 a.pdflink:hover {
     border: 1px solid #900;
