--- a/static/css/custom-styles.css
+++ b/static/css/custom-styles.css
@@ -82,3 +82,23 @@ a.pdflink:hover {
     float: left;
     margin: 0.6em !important;
 }
+
+.people-page {
+    list-style: none;
+}
+    .people-page .bio-profile-pic {
+        width: 8em;
+        height: 8em;
+        margin-top: 0 !important;;
+    }
+    .people-page li {
+        clear: both;
+        height: 8em;
+    }
+    .people-page li h2 {
+        margin-bottom: 0;
+        margin-top: 1em !important;
+    }
+    .people-page li p {
+        margin: 0;
+    }
