--- a/static/css/custom-styles.css
+++ b/static/css/custom-styles.css
@@ -102,3 +102,9 @@ a.pdflink:hover {
     .people-page li p {
         margin: 0;
     }
+
+#alumni {
+    margin-top: 0;
+    padding-top: 0.5em;
+    border-top: 1px solid #000;
+}
