--- a/static/css/custom-styles.css
+++ b/static/css/custom-styles.css
@@ -85,6 +85,7 @@ a.pdflink:hover {
 
 .people-page {
     list-style: none;
+    text-align: left;
 }
     .people-page .bio-profile-pic {
         width: 8em;
@@ -93,7 +94,7 @@ a.pdflink:hover {
     }
     .people-page li {
         clear: both;
-        height: 8em;
+        /*! height: 8em; */
     }
     .people-page li h2 {
         margin-bottom: 0;
@@ -107,4 +108,28 @@ a.pdflink:hover {
     margin-top: 0;
     padding-top: 0.5em;
     border-top: 1px solid #000;
+}
+
+@media screen and (max-width: 450px) {
+    .nav-title {
+        font-size: 7vw;
+    }
+}
+
+@media screen and (max-width: 492px) {
+    .people-page {
+        padding: 0;
+    }
+    .people-page li {
+        height: auto;
+        text-align: center;
+    }
+    .people-page .bio-profile-pic {
+        float: none;
+        margin: 0 !important;
+        margin-top: 2em !important;;
+    }
+    .people-page li h2 {
+        margin-top: 0 !important;
+    }
 }
